--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/GittiAI/assets/main.js"></script>
+    <script type="module" src="./assets/main.js"></script>
   </body>
 </html>
